fix: spacing

--- a/src/Components/Home-Page/Layout/Information/InformationHeader/index.css
+++ b/src/Components/Home-Page/Layout/Information/InformationHeader/index.css
@@ -102,6 +102,10 @@
     width: 16.1rem;
     top: 38%;
   }
+  .information-tab-container {
+    padding: 0px !important;
+  }
+
   .information-header-heading-card {
     height: 30rem;
     text-align: center;
