--- a/src/Components/Home-Page/Layout/Information/InformationTabs/index.css
+++ b/src/Components/Home-Page/Layout/Information/InformationTabs/index.css
@@ -1,5 +1,5 @@
 .information-tab-container {
-  /* background-color: #f6f8f7; */
+  background-color: #f6f8f7;
   padding: 1rem;
 }
 
